Added Chat & Combat

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,10 @@
     </div>
     <fieldset>
       <legend>--Chat--</legend>
-      <div id = "chatDiv"> </div>
+      <a>
+      <div id = "chatDiv"></div>
+      </a>
+      <input id="chatIn"></input> | <input id = "ChatButton" class = "Button" type = "submit" value = "Submit" onclick = "SubmitChat()">
     </fieldset>
 
     <fieldset id="debugFieldset">
