Fixed Grid (debug menu-> enable grid)

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
   <html>
     <head>
-      <title> Playful Sandbox </title>
+      <title> Sand Game </title>
       <meta name = "charset" charset = "utf-8">
       <meta name = "viewport" content = "width=device-width">
       <link rel = "stylesheet" type = "text/css" href = "style.css">
