--- a/html/index.html
+++ b/html/index.html
@@ -6,22 +6,25 @@
       <meta name = "viewport" content = "width=device-width">
       <link rel = "stylesheet" type = "text/css" href = "style.css">
       <script src = "pre.js"></script>
-      <script src = "inputs.js"></script>
+      <script src = "engine/inputs.js"></script>
       <script src = "loadhud.js"></script>
       <script src = "handlemultiplayer.js"></script>
       <script src = "script.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
+      <script src = "engine/physics_class.js"></script>
+      <script src = "engine/render_class.js"></script>
+      <script src = "engine/input_class.js"></script>
       <script src = "game.js"></script>
       <script src= "socket.io/socket.io.js"></script>
     </head>
   <body onload = "onload()" oncontextmenu="return false;">
     <div id = "Roomconnect">
       <div id = "AccessPort">
-        <label id = "NameLabel"> Gamertag  </label>
-        <input id = "NameInput" type = "text">
-        <br>
-        <label id = "IDLabel"> Server </label> 
-        <input id = "IDInput" value = "Room1" type = "text">
+        <!-- <label id = "NameLabel"> Gamertag  </label> -->
+        [ Gamertag <input id = "NameInput" type = "text"> ]
+        <!-- <br> -->
+        <!-- <label id = "IDLabel"> Server </label>  -->
+       [ Server <input id = "IDInput" value = "Room1" type = "text"> ]
         <input id = "ConnectButton" class = "Button" type = "submit" value = "Connect" onclick = "Connect()">
       </div>
       <h2 id = "RoomID"> Server : None </h2>
