--- a/html/index.html
+++ b/html/index.html
@@ -5,17 +5,26 @@
       <meta name = "charset" charset = "utf-8">
       <meta name = "viewport" content = "width=device-width">
       <link rel = "stylesheet" type = "text/css" href = "style.css">
-      <script src = "pre.js"></script>
-      <script src = "engine/inputs.js"></script>
-      <script src = "loadhud.js"></script>
-      <script src = "handlemultiplayer.js"></script>
-      <script src = "script.js"></script>
+
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
+
+      <script src = "pre.js"></script>
+
+      <script src = "engine/inputs.js"></script>
+      
       <script src = "engine/physics_class.js"></script>
       <script src = "engine/render_class.js"></script>
       <script src = "engine/input_class.js"></script>
+
+      <script src = "loadhud.js"></script>
+      <script src = "handlemultiplayer.js"></script>
+      <script src = "script.js"></script>
+
       <script src = "game.js"></script>
       <script src= "socket.io/socket.io.js"></script>
+
+      <script src = "tempGameScaleSlider.js"></script>
+
     </head>
   <body onload = "onload()" oncontextmenu="return false;">
     <div id = "Roomconnect">
@@ -27,8 +36,14 @@
        [ Server <input id = "IDInput" value = "Room1" type = "text"> ]
         <input id = "ConnectButton" class = "Button" type = "submit" value = "Connect" onclick = "Connect()">
       </div>
-      <h2 id = "RoomID"> Server : None </h2>
     </div>
+
+    <div>
+      Set Scale - [
+      <input type="range" min="5" max="75" value="20" class="slider" id="myRange">
+      ]
+    </div>
+
     <fieldset id = "Gamefieldset">
       <legend id = "Gamelegend"></legend>
     <div id="nestCanvas"></div>
