before it's too late

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
       <script src = "engine/inputs.js"></script>
       
       <script src = "engine/physics_class.js"></script>
+      <script src = "engine/world_class.js"></script>
       <script src = "engine/render_class.js"></script>
       <script src = "engine/input_class.js"></script>
 
@@ -40,7 +41,7 @@
 
     <div>
       Set Scale - [
-      <input type="range" min="5" max="75" value="20" class="slider" id="myRange">
+      <input type="range" min="5" max="100" value="20" class="slider" id="myRange">
       ]
     </div>
 
