chunks work online

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
       <meta name = "charset" charset = "utf-8">
       <meta name = "viewport" content = "width=device-width">
       <link rel = "stylesheet" type = "text/css" href = "style.css">
+      <link rel = "shortcut icon" type="image/png" href="/assets/assets-png/FrontOfMan.png">
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 
