OOOH PLAYERS COOL LOOKIN OR SOMETHING

--- a/html/index.html
+++ b/html/index.html
@@ -26,31 +26,14 @@
 
     </head>
   <body onload = "onload()" oncontextmenu="return false;">
-    <div id = "Roomconnect">
+    <!-- <div id = "Roomconnect">
       <div id = "AccessPort">
-        <!-- <label id = "NameLabel"> Gamertag  </label> -->
         [ Gamertag <input id = "NameInput" type = "text"> ]
-        <!-- <br> -->
-        <!-- <label id = "IDLabel"> Server </label>  -->
+        <br>
        [ Server <input id = "IDInput" value = "Room1" type = "text"> ]
         <input id = "ConnectButton" class = "Button" type = "submit" value = "Connect" onclick = "Connect()">
       </div>
-    </div>
-<!-- bye -->
+    </div> -->
 
-
-    <fieldset id="chatFieldset">
-      <legend>--Chat--</legend>
-      <a>
-        <div id = "chatScroller">
-          <div id = "chatDiv"></div>
-          <div id = "endOfChat"></div>
-        </div>
-      </a>
-      <input id="chatIn"></input> | <input id = "ChatButton" class = "Button" type = "submit" value = "Submit" onclick = "SubmitChat()">
-    </fieldset>
-    <fieldset id="debugFieldset">
-      <div id="debugSet"></div>
-    </fieldset>
   </body>
 </html>
