--- a/html/index.html
+++ b/html/index.html
@@ -19,9 +19,10 @@
       <script src = "engine/input_class.js"></script>
 
       <script src = "handlemultiplayer.js"></script>
-      <script src = "script.js"></script>
 
-      <script src = "game.js"></script>
+      <script src = "tasks.js"></script>
+      <script src = "main.js"></script>
+      <!-- <script src = "game.js"></script> -->
       <script src= "socket.io/socket.io.js"></script>
 
     </head>
